# DebateAIPython

Arguehub-Backend/: example.db  examples.dp  prac.py  pyproject.toml
Arguehub-Backend/alembic/: env.py
Arguehub-Backend/api/v1/endpoints/: server.py
Arguehub-Backend/app/: main.py
Arguehub-Backend/app/api/: auth.py
Arguehub-Backend/app/crud/: user.py
Arguehub-Backend/app/database/: main.py
Arguehub-Backend/app/models/: User.py
Arguehub-Backend/app/services/: auth_service.py
Arguehub-Backend/database/: main.py  redisMain.py
Arguehub-Backend/router/auth/: routes.py
