[project]
name = "arguehub-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "redis>=6.0.0",
    "rq>=2.3.2",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]
[project.scripts]
server = "api.v1.endpoints.server:main"
